DashBoard Component Update

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InvoiceM</title>
+  <title>Crm</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Correct the favicon path -->
+  
+   <link rel="icon" type="image/x-icon" href="images/faviconCrm.ico">
 </head>
 <body>
   <app-root></app-root>
